Prevent flickering if possible

--- a/views/index.sass
+++ b/views/index.sass
@@ -1,6 +1,8 @@
 
 /* reset */ /*-------------------------------------------------------------------------------------------*/
 
+$bgcol:  #011130
+
 html, body, div, span, 
 h1, h2, h3, h4, h5, h6,
 p, blockquote, img,
@@ -22,7 +24,7 @@ dl, dt, dd, ol, ul, li
 body
   line-height: 1
   color: black
-  background: white
+  background: $bgcol
 
 ol, ul
   list-style: none
@@ -73,7 +75,7 @@ body
   font-family: "Source Sans Pro", "Open Sans", Helvetica, sans-serif
   background-image: url("/images/site-bg.png")
   background-repeat: no-repeat
-  background-color: #63818c
+  background-color: $bgcol
   background-attachment: fixed
   color: #92a6ac
   font-weight: 300
